# mtg-deck

./: .gitignore  .gitmodules  Makefile  README.md  ReadMe.md  config.py  db.py  main.py  mock.txt  pyproject.toml  requirements.txt  service.py  utils.py
cli/: __init__.py  card.py  deck.py  export.py  utils.py
commom/: card_commands.py  commander_meta_commands.py  deck_analyzer.py  deck_card_commands.py  deck_commands.py  deck_list_commands.py  exception_handler.py  sync_db_commands.py  top_commanders_commands.py
domain/: card.py  card_service.py  deck_card.py  deck_card_service.py  deck_service.py
edhelper/: main.py
edhelper/cli/: README.md  __init__.py
edhelper/commom/: exception_handler.py  excptions.py  sync_db_commands.py
edhelper/domain/: card_service.py
edhelper/editor/: README.md
edhelper/editor/backend/: main.py
edhelper/infra/: config.py
editor/backend/: main.py
editor/backend/app/routers/: card.py  commander.py  (+1 more)
infra/: config.py  db.py  init_db.py  schema.sql
shell/: README.md
shell/domain/: card_service.py  deck_card.py  deck_card_service.py  deck_service.py
shell/infra/: db.py
shell/lang/: grammar.lark  parser.py  transformer.py
shell/lang/commands/: add.py  analize.py  analyze.py  clear_screen.py  commander.py  copy.py  create.py  delete.py  exit_cmd.py  export_all.py  export_csv.py  export_json.py  export_txt.py  find.py  import_txt.py  list_cmd.py  meta.py  remove.py  rename.py  reset_commander.py  search.py  select.py  set_commander.py  sync_db.py  top_commanders.py
shell/repl/: completer.py  context.py  repl.py
(+4 files in other folders)
