[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "lark>=1.3.1",
    "prompt-toolkit>=3.0.52",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
    "uvicorn>=0.38.0",
]
